Backend bugfix + frontend improvements
